--- a/common/schedule.html
+++ b/common/schedule.html
@@ -4,91 +4,91 @@ Schedule
 
 Week 1
 
-Derek vs. Reid
-Jeff vs. Simon
-Brian vs. Brandon
-Mike vs. Jon
+Derek vs. Brandon
+Brian vs. Jeff
+Mike vs. Simon
+Jon vs. Reid
 
 Week 2
 
-Derek vs. Mike
-Reid vs. Jon
-Jeff vs. Brian
-Simon vs. Brandon
+Derek vs. Brian
+Brandon vs. Jeff
+Mike vs. Jon
+Simon vs. Reid
 
 Week 3
 
-Derek vs. Jeff
-Reid vs. Simon
-Brian vs. Mike
+Derek vs. Reid
 Brandon vs. Jon
+Brian vs. Simon
+Jeff vs. Mike
 
 Week 4
 
-Derek vs. Simon
-Reid vs. Jeff
-Brian vs. Jon
-Brandon vs. Mike
+Derek vs. Brian
+Brandon vs. Jeff
+Mike vs. Jon
+Simon vs. Reid
 
 Week 5
 
 Derek vs. Jeff
-Reid vs. Simon
-Brian vs. Mike
-Brandon vs. Jon
+Brandon vs. Brian
+Mike vs. Reid
+Simon vs. Jon
 
 Week 6
 
 Derek vs. Brandon
-Reid vs. Brian
-Jeff vs. Jon
-Simon vs. Mike
+Brian vs. Jeff
+Mike vs. Simon
+Jon vs. Reid
 
 Week 7
 
-Derek vs. Brian
-Reid vs. Brandon
-Jeff vs. Mike
-Simon vs. Jon
+Derek vs. Simon
+Brandon vs. Mike
+Brian vs. Reid
+Jeff vs. Jon
 
 Week 8
 
-Derek vs. Simon
-Reid vs. Jeff
-Brian vs. Jon
-Brandon vs. Mike
+Derek vs. Jeff
+Brandon vs. Brian
+Mike vs. Reid
+Simon vs. Jon
 
 Week 9
 
-Derek vs. Jon
-Reid vs. Mike
-Jeff vs. Brandon
-Simon vs. Brian
+Derek vs. Mike
+Brandon vs. Simon
+Brian vs. Jon
+Jeff vs. Reid
 
 Week 10
 
-Derek vs. Brian
-Reid vs. Brandon
-Jeff vs. Mike
-Simon vs. Jon
+Derek vs. Jon
+Brandon vs. Reid
+Brian vs. Mike
+Jeff vs. Simon
 
 Week 11
 
 Derek vs. Mike
-Reid vs. Jon
-Jeff vs. Brian
-Simon vs. Brandon
+Brandon vs. Simon
+Brian vs. Jon
+Jeff vs. Reid
 
 Week 12
 
-Derek vs. Reid
-Jeff vs. Simon
-Brian vs. Brandon
-Mike vs. Jon
+Derek vs. Simon
+Brandon vs. Mike
+Brian vs. Reid
+Jeff vs. Jon
 
 Week 13
 
-Derek vs. Brandon
-Reid vs. Brian
-Jeff vs. Jon
-Simon vs. Mike
+Derek vs. Jon
+Brandon vs. Reid
+Brian vs. Mike
+Jeff vs. Simon
